remove unneeded files

--- a/WebDeploy/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider.csproj
+++ b/WebDeploy/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider.csproj
@@ -35,11 +35,11 @@
   <ItemGroup>
     <Reference Include="Microsoft.Web.Delegation, Version=7.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\IIS\Microsoft Web Deploy\Microsoft.Web.Delegation.dll</HintPath>
+      <HintPath>..\External\IISWebDeploy\v3.0\Microsoft.Web.Delegation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Deployment, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\IIS\Microsoft Web Deploy\Microsoft.Web.Deployment.dll</HintPath>
+      <HintPath>..\External\IISWebDeploy\v3.0\Microsoft.Web.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
