Set content-type before uploading, permissions on container creation, unescape the URI

--- a/WebDeploy/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider.csproj
+++ b/WebDeploy/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider/AzureBlobsWebDeployProvider.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AzureBlobsDeploymentProviderFactory.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MimeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
